# auto-trading-bot

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirement.md  runner.yaml.example
docs/: HLD.md
docs/flows/: trade-execution-flow.md
docs/mermaidDiag/: trade-execution-flow.md
docs/reference/: binance-api.md
docs/superpowers/plans/: 2026-06-28-futures-refactor.md
docs/superpowers/specs/: 2026-06-21-trading-bot-8-week-design.md  2026-06-24-live-trading-demo-design.md  2026-06-28-futures-refactor-design.md  2026-06-30-live-runner-design.md  2026-06-30-next-phase-design.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
migrations/: env.py
migrations/versions/: af285bc12f61_extend_positions_add_trade_stages.py  b9cd2dcd8466_initial_schema.py
src/trading_bot/: config.py  logging_config.py  mcp_server.py  trade_cli.py
src/trading_bot/analytics/: metrics.py
src/trading_bot/backtest/: engine.py  (+2 more)
tests/: test_broker.py  test_cli.py  test_config.py  test_downloader.py  test_models.py  test_parity.py  test_storage.py  test_types.py
tests/analytics/: test_metrics.py
tests/backtest/: test_engine.py  test_simulated_broker.py
tests/cli/: test_futures_cli.py
tests/market_data/: test_ws_feed.py
tests/research/: test_optimizer.py
tests/risk/: test_manager.py
tests/runner/: test_config.py  test_config_selector.py  test_live_runner.py
tests/strategy/: test_ma_crossover.py  test_rsi.py
(+52 files in other folders)
